chore: hexagonal architecture
